# pre-entry-tb-screening-app

./: .gitignore  Localstack_config.md  README.md  TODO  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pets-config.js  pets-config.mjs  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  sonar-project.properties  start.mjs  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  renovate-global-config.json  run-virtuoso-ukhsa-ukprd.yml
.github/dashboard/: pets-dashboard.html
.github/pages/: index.html
.github/scripts/: add-integrations-to-swagger.js  add-integrations-to-swagger.ts  create-deployment-matrix.js  create-package-dot-json.js  create-package-dot-json.ts  swagger-integrations.js  zip-node-modules.js
.github/workflows/: PETSNightlyDashboard.html  app-cd.yaml  app-ci.yaml  app-deploy-dev.yaml  app-deploy-preprod.yaml  app-deploy-prod.yaml  app-deploy-test.yaml  app-deploy.yaml  app-pr-checks.yaml  ci.yaml  clinic-service-cd.yaml  clinic-service-ci.yaml  clinic-service-deploy-dev.yaml  clinic-service-deploy-test.yaml  clinic-service-deploy.yaml  clinic-service-pr-checks.yaml  consolidatedReportsDashboard.yaml  core-services-ci.yaml  core-services-deploy-dev.yaml  core-services-deploy-preprod.yaml  core-services-deploy-prod.yaml  core-services-deploy-test.yaml  core-services-deploy.yaml  core-services-pr-checks.yaml  deploy-dev.yaml  deploy-migration-script.yaml  deploy-preprod.yaml  deploy-prod.yaml  deploy-test.yaml  deploy.yaml  migrate-applicant.yaml  migrate-db-data.yaml  migrate.yaml  nightlyCypressRuns.yaml  nightlyCypressRuns.yml  nightlyCypressTests-DEV.yaml  nightlyCypressTests-Preprod.yaml  nightlyCypressTests-QAT.yaml  nightlyCypressTests.yaml  publish-pets-dashboard.yaml  (+7 more)
.husky/: pre-commit  pre-push
Config/: .env.dev
app/pets-ui/: .babelrc  .gitignore  README.md  jest.config.ts  package-lock.json  package.json  sonar-project.properties  tsconfig.json
configs/: .env  .env.dev  .env.pre  .env.preprod  .env.prod  .env.qat  .env.test  .env.test.local
core-services/applicant-service/: .gitignore  README.md  applicants.ts  jest.config.ts  package.json  serverless.yml  sonar-project.properties  tsconfig.json
core-services/application-service/: .gitignore  README.md  application.ts  package.json  serverless.yml  tsconfig.json  types.d.ts
core-services/clinic-service/: .env.dev  .gitignore  README.md  clinics.ts  handler.js  jest.config.ts  package.json  serverless.yml  severless.yml  sonar-project.properties  swagger-integrations.js  tsconfig.json  zip-node-modules.js
core-services/lambda-authoriser/: .gitignore  README.md  jest.config.ts  package.json  serverless.yml  sonar-project.properties  tsconfig.json
docs/: aws-access.md  user-story-template.md
pets-backend/: package.json
pets-core-services/: .gitignore  deployment-config.ts  deployment.config.json  esbuild.config.js  openapi-docs.json  package.json  sonar-project.properties  tsconfig.json  vitest.config.ts  vitest.workspace.ts
pets-core-services/src/: middy-router.d.ts
pets-local-infra/: README.md  cdk.json  esbuild.local.config.mjs  package.json  tsconfig.json
pets-local-infra/lib/: local-infra-stack.ts
pets-ui/: .gitignore  README.md  cypress.config.mjs  cypress.d.ts  cypress.env.json  eslint.config.js  index.html  package-lock.json  package.json  sonar-project.properties  tsconfig.app.json  tsconfig.json  tsconfig.vite.json  vite.config.ts  vitest.setup.ts
pets-ui/api/: api.ts
pets-ui/axios/: api.ts
pets-ui/cypress/: cypress.config.mjs  cypress.d.ts  tsconfig.json
pets-ui/src/: App.tsx  applicant.d.ts  globals.scss  main.tsx  types.d.ts
pets-ui/test/: accessibility-statement.intTest.tsx  api.intTest.ts  applicant-confirmation.intTest.tsx  applicant-contact-details-form.intTest.tsx  applicant-form.intTest.tsx  applicant-passport-details-form.intTest.tsx  applicant-personal-details-form.intTest.tsx  applicant-photo-context.intTest.tsx  applicant-photo-form.intTest.tsx  applicant-search-form.intTest.tsx  applicant-search-no-results.intTest.tsx  applicant-summary.intTest.tsx  applicant-travel-confirmation.intTest.tsx  applicant-travel-form.intTest.tsx  auth.intTest.tsx  (+44 more)
scripts/: convert_json_to_dynamodbjson.py  execute.sh  file_changed.sh  migration_script.py  pull-secrets.mjs  start.mjs  team-notification.mjs  validate_enum_consistency.py  watch-docker-logs.mjs
scripts/applicant_migration/: README.md  docker-compose.yml  file_changed.sh  pyproject.toml  pytest.ini  requirements.txt
scripts/applicant_migration/src/: conftest.py  migration_script.py  test_integration.py  test_unit.py
scripts/onboarding_glue_job/: docker-compose.yml  pyproject.toml
scripts/onboarding_glue_job/src/: clinics_data_load.py  conftest.py  test_clinics_data_load.py  test_integration.py  test_unit.py
(+910 files in other folders)
