[project]
name = "applicant_migration"
version = "0.1.0"
description = "Applicant table migration, application table update"
authors = ["UKHSA"]
requires-python = ">=3.9,<3.10"
dependencies = [
    "boto3>=1.42.67",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-docker>=3.2.5",
    "pytest-freezegun>=0.4.2",
]

[tool.setuptools]
packages = ["applicant_migration"]

[tool.pytest.ini_options]
addopts = "-p no:warnings -p no:cacheprovider"
filterwarnings = [
    "ignore::DeprecationWarning:botocore.*"
]
